@@ -110,6 +110,9 @@
     <entry key="Max Icon Size" type="Int">
         <default>96</default>
     </entry>
+    <entry key="Icon Cache Size" type="Int">
+        <default>1000</default>
+    </entry>
     <entry key="Image Cache Size" type="Int">
         <default code="true">(64 * 1024 * 1024)</default>
     </entry>
